--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
-    "@mui/x-date-pickers": "^6.16.3",
+    "@mui/x-date-pickers": "^6.19.0",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
