feat: add input auto complete

--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "@aldabil/react-scheduler": "^2.7.25",
     "@cyntler/react-doc-viewer": "^1.14.1",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.14.15",
-    "@mui/material": "^5.14.15",
-    "@mui/x-date-pickers": "^6.19.0",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
+    "@mui/x-date-pickers": "^6.19.2",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "material-react-table": "^2.9.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
