--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "@mui/x-data-grid": "^6.19.6",
     "@mui/x-date-pickers": "^6.19.2",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
@@ -25,7 +26,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.3",
+    "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.17.0",
     "xlsx": "^0.18.5"
   },
